--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 
 <body>
 
-    <div id="menu">
-        <a href="index.html">Главная</a>
-        <a href="about_us.html">О нас</a>
-        <a href="contact.html">Контакты</a>
-    </div>
+    <h5>Заголовок</h5> <p>Текст параграфа</p>
 
 </body>
 
