--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
 
-    <h5>Заголовок</h5> <p>Текст параграфа</p>
+    <ul>
+        <h6>Заголовок</h6>
+        <h6>Заголовок</h6>
+        <h6>Заголовок</h6>
+    </ul>
 
 </body>
 
