--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
 <body>
 
-    <p>Параграф 1</p>
-    <p id="p2">Параграф 2</p>
-    <p>Параграф 3</p>
-    <p id="p4">Параграф 4</p>
-    <p>Параграф 5</p>
+    <div id="header">Шапка сайта</div>
+    <div id="menu">Меню</div>
+    <div id="content">Контент</div>
+    <div id="footer">Низ сайта</div>
 
 </body>
 
