--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <div id="header">Шапка сайта</div>
     <div id="menu">Меню</div>
-    <div id="content">Контент</div>
+    <div id="content">Контент
+        <div id="news">Блок новостей</div>
+    </div>
     <div id="footer">Низ сайта</div>
 
 </body>
