--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 
 <body>
 
-    <div id="header">Шапка сайта</div>
-    <div id="menu">Меню</div>
-    <div id="content">Контент
-        <div id="news">Блок новостей</div>
-    </div>
-    <div id="footer">Низ сайта</div>
+    <div id="block1">Блок 1</div>
+    <div id="block2">Блок 2</div>
+    <div id="block3">Блок 3</div>
 
 </body>
 
