--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
 
     <div id="block1">Блок 1</div>
-    <div id="block2">Блок 2</div>
-    <div id="block3">Блок 3</div>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo cupiditate, corrupti asperiores praesentium veniam
 
 </body>
 
