--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
 <body>
 
-    <div id="block1">Блок 1</div>
-    <div id="block2">Блок 2</div>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo cupiditate, corrupti asperiores praesentium veniam
+    <div id="header">Шапка сайта</div>
+    <div id="menu">Меню</div>
+    <div id="content">Контент
+        <div id="news">Блок новостей</div>
+    </div>
+    <div id="footer">Низ сайта</div>
 
 </body>
 
